microservices/auth-service/k8s/auth-service-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
      version: blue
  template:
    metadata:
      labels:
        app: auth-service
        version: blue
    spec:
      containers:
      - name: auth-service
        image: 782388527370.dkr.ecr.us-east-1.amazonaws.com/auth-service:latest
        ports:
        - containerPort: 8080
