microservices/auth-service/k8s/auth-service-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
      version: green
  template:
    metadata:
      labels:
        app: auth-service
        version: green
    spec:
      containers:
      - name: auth-service
        image: 782388527370.dkr.ecr.ap-south-1.amazonaws.com/auth-service:latest
        ports:
        - containerPort: 8080
